--- a/app/src/main/res/layout/ppe_request_alert.xml
+++ b/app/src/main/res/layout/ppe_request_alert.xml
@@ -46,7 +46,7 @@
             android:id="@+id/edt_address1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Address Line 1*"
+            android:hint="@string/address_line_1"
             android:imeOptions="actionUnspecified"
             android:inputType="textCapWords"
             android:maxLength="50"
@@ -64,7 +64,7 @@
             android:id="@+id/edt_address2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Address Line 2"
+            android:hint="@string/address_line_2"
             android:imeOptions="actionUnspecified"
             android:inputType="textCapWords"
             android:maxLength="50"
@@ -126,7 +126,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:background="@null"
-            android:text="Submit"
+            android:text="@string/submit_ppe_alert"
             android:textColor="@color/txt_sub_header_color"
             android:textSize="16sp"
             android:fontFamily="@font/lato_bold"/>
@@ -136,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@null"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:layout_toStartOf="@+id/btn_positive"
             android:textColor="@color/txt_sub_header_color"
             android:textSize="16sp"
