--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -448,27 +448,46 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                    <!-- android:textColor="#50000000"-->
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/username"
-                        android:imeOptions="actionNext"
-                        android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
-                        android:inputType="text"
-                        android:maxLines="1"
-                        android:maxLength="8"
-                        android:nextFocusForward="@id/password"
-                        android:textAppearance="@style/sign_up_input"/>
-                       <!-- android:maxLines="1"
-                        android:nextFocusForward="@id/password" />-->
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                                <!-- android:textColor="#50000000"-->
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/email"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/username"
+                                    android:imeOptions="actionNext"
+                                    android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+                                    android:inputType="text"
+                                    android:maxLines="1"
+                                    android:maxLength="8"
+                                    android:nextFocusForward="@id/password"
+                                    android:textAppearance="@style/sign_up_input"/>
+                                <!-- android:maxLines="1"
+                                 android:nextFocusForward="@id/password" />-->
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+
+                            <ImageView
+                                android:id="@+id/image_username_valid"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginEnd="12dp"
+                                android:layout_marginTop="0dp"
+                                android:layout_gravity="center_vertical|right"
+                                app:srcCompat = "@drawable/svg_valid_icon">
+
+                            </ImageView>
+                        </FrameLayout>
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
