--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -35,8 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_logo"
-                android:layout_marginEnd="30dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="50dp"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical">
 
@@ -77,7 +77,7 @@
                             android:fontFamily="@font/lato_regular"
                             android:theme="@style/MyEditTextTheme"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textSize="24sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -131,14 +131,16 @@
                     android:id="@+id/email_sign_in_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="25dp"
+                    android:paddingVertical="10dp"
+
                     android:background="@drawable/button_bg_rounded_corners"
                     android:text="@string/action_sign_in"
                     android:fontFamily="@font/lato_bold"
                     android:textColor="@color/button_text_color"
-                    android:textSize="16sp"
+                    android:textSize="26sp"
                     />
 
                 <TextView
@@ -155,7 +157,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/cant_login_user"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     />
 
 
@@ -170,7 +172,7 @@
                     android:text="@string/txt_sign_up_option"
                     android:textColor="@color/white"
                     android:fontFamily="@font/lato_regular"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     android:textColorLink="@color/white"
                     />
 
@@ -178,15 +180,16 @@
                     android:id="@+id/sign_up_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="20dp"
+                    android:paddingVertical="10dp"
                     android:background="@drawable/button_bg_rounded_corners"
                     android:text="@string/title_sign_up"
                     android:fontFamily="@font/lato_bold"
                     android:textColor="@color/button_text_color"
-                    android:textSize="16sp"
-                    android:layout_marginBottom="10dp"
+                    android:textSize="26sp"
+                    android:layout_marginBottom="20dp"
                     />
 
 
