--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,8 +89,21 @@
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
 
+    <style name="sign_up_title_600dp">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
     <style name="please_fill">
         <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#828282</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
+    <style name="please_fill_600dp">
+        <item name="android:textSize">18sp</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:textColor">#828282</item>
         <item name="android:fontFamily">@font/lato_regular</item>
@@ -101,6 +114,11 @@
         <item name="android:textColor">#333333</item>
         <item name="android:fontFamily">@font/lato_regular</item>
     </style>
+    <style name="sign_up_input_600dp">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
 
     <style name="login_details_conditions">
         <item name="android:textSize">10sp</item>
@@ -108,15 +126,35 @@
         <item name="android:textColor">#828282</item>
         <item name="android:fontFamily">@font/lato_regular</item>
     </style>
+    <style name="login_details_conditions_600dp">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#828282</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+
     <style name="sign_up_gender">
         <item name="android:textSize">13sp</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:textColor">#373737</item>
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
+    <style name="sign_up_gender_600dp">
+        <item name="android:textSize">17sp</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textColor">#373737</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+
 
     <style name="sign_up_save">
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/lato_medium</item>
+    </style>
+
+    <style name="sign_up_save_600dp">
+        <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/lato_medium</item>
     </style>
