--- a/app/src/main/res/layout-sw600dp/activity_signup.xml
+++ b/app/src/main/res/layout-sw600dp/activity_signup.xml
@@ -299,7 +299,8 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:orientation="vertical">
+                                    android:orientation="vertical"
+                                    android:layout_marginTop="5dp">
 
                                     <EditText
                                         android:id="@+id/identification_caste"
