--- a/app/src/main/res/layout-sw600dp/activity_signup.xml
+++ b/app/src/main/res/layout-sw600dp/activity_signup.xml
@@ -28,10 +28,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp"
         android:background="#E5E5E5"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="io.intelehealth.client.activities.identification_activity.IdentificationActivity"
@@ -170,7 +170,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="16dp"
                             android:paddingLeft="8dp"
                             android:paddingRight="8dp">
 
