PrivacyNotice screen is modified.

--- a/app/src/main/res/layout-sw600dp/activity_privacy_notice_2.xml
+++ b/app/src/main/res/layout-sw600dp/activity_privacy_notice_2.xml
@@ -40,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:paddingVertical="2dp"
             android:fontFamily="@fonts/Lato_Regular"
             android:text="@string/privacy_agree" />
 
@@ -55,9 +56,8 @@
             android:gravity="end"
             android:padding="10dp"
             android:text="@string/next"
-            android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <ScrollView
