--- a/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
+++ b/app/src/main/res/layout-sw600dp/activity_splash_activity.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher_new" />
 
         <TextView
             android:layout_width="wrap_content"
