--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -27,8 +27,11 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="20dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="25dp"
+                android:src="@mipmap/ic_launcher_new" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
