--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="20dp"
-                android:src="@mipmap/ic_launcher_new" />
+                android:src="@mipmap/ic_launcher" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
