--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -31,7 +31,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="25dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher_new" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
