Tablet_textsize_issues

--- a/app/src/main/res/layout-sw600dp/content_visit_summary.xml
+++ b/app/src/main/res/layout-sw600dp/content_visit_summary.xml
@@ -577,7 +577,7 @@
                         android:text="@string/txt_whatsapp_helpline"
                         android:textSize="@dimen/text_18sp"
                         android:layout_marginStart="14sp"
-                        android:fontFamily="@font/lato_medium"
+                        android:fontFamily="@font/lato_bold"
                         android:textColor="@color/txt_sub_header_color"
                         android:textStyle="bold"
                         android:background="@android:color/transparent"
@@ -652,6 +652,7 @@
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/lato_bold"
                         android:gravity="start|center"
+                        android:textSize="@dimen/text_20sp"
                         android:hint=""
                         android:textStyle="bold"
                         android:text="@string/teleconsult_request"
