--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -582,7 +582,7 @@ Github: prajwalmw
                         android:text="@string/txt_whatsapp_helpline"
                         android:textSize="@dimen/text_18sp"
                         android:layout_marginStart="10sp"
-                        android:fontFamily="@font/lato_medium"
+                        android:fontFamily="@font/lato_bold"
                         android:textColor="@color/txt_sub_header_color"
                         android:textStyle="bold"
                         android:background="@android:color/transparent"
@@ -658,6 +658,7 @@ Github: prajwalmw
                         android:fontFamily="@font/lato_bold"
                         android:gravity="start|center"
                         android:hint=""
+                        android:textSize="@dimen/text_20sp"
                         android:textStyle="bold"
                         android:text="@string/teleconsult_request"
                         android:textColor="@color/txt_sub_header_color" />
