--- a/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
+++ b/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
@@ -7,6 +7,7 @@
     android:background="#90bababa">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_g"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
