--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:background="@color/colorPrimaryDark"
     tools:context=".activities.loginActivity.LoginActivity">
 
@@ -28,7 +29,7 @@
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="20dp"
-                android:src="@mipmap/ic_launcher_splash_login" />
+                    android:src="@mipmap/ic_launcher_splash_login" />
 
             <LinearLayout
                 android:id="@+id/ll_center"
