--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -109,6 +109,7 @@
                                 android:imeOptions="actionUnspecified"
                                 android:inputType="textCapWords"
                                 android:maxLength="25"
+                                android:nextFocusForward="@id/identification_last_name"
                                 android:maxLines="1"
                                 android:singleLine="true"
                                 android:textAppearance="@style/sign_up_input"/>
@@ -136,7 +137,6 @@
                                 android:textAppearance="@style/sign_up_input"/>
 
                         </com.google.android.material.textfield.TextInputLayout>
-
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -150,8 +150,29 @@
                                 android:freezesText="true"
                                 android:hint="@string/identification_screen_prompt_last_name"
                                 android:imeOptions="actionUnspecified"
+                                android:nextFocusForward="@id/identification_email"
                                 android:inputType="textCapWords"
                                 android:maxLength="25"
+                                android:maxLines="1"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input"/>
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/identification_email"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:autofillHints="@string/action_settings"
+                                android:ems="10"
+                                android:freezesText="true"
+                                android:hint="@string/identification_screen_prompt_email"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType="textWebEmailAddress"
                                 android:maxLines="1"
                                 android:singleLine="true"
                                 android:textAppearance="@style/sign_up_input"/>
