--- a/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
+++ b/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#90bababa">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_g"
