--- a/app/src/main/res/layout/activity_card__guidelines.xml
+++ b/app/src/main/res/layout/activity_card__guidelines.xml
@@ -6,28 +6,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="#fcfcff"
     tools:context=".activities.CardGuidelines.Card_Guidelines">
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/actionbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:theme="@style/AppTheme.AppBarOverlay">-->
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/actionbar"
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:background="@color/white"-->
+<!--            app:popupTheme="@style/AppTheme.PopupOverlay"-->
+<!--            app:title="Card Guidelines"-->
+<!--            app:titleTextColor="@color/font_black_0" />-->
+
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="Card Guidelines"
-            app:titleTextColor="@color/font_black_0" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <RelativeLayout
+            android:id="@+id/btn_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/svg_header_left_arrow"
+                android:layout_centerInParent="true"/>
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/txt_sub_header_color"
+            android:textSize="30sp"
+            android:fontFamily="@font/lato_bold"
+            android:layout_gravity="center_vertical"
+            android:includeFontPadding="false"
+            android:text="@string/card_guidelines"
+            android:layout_marginStart="15dp"
+            />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/card_guidelines_recycler"
         android:layout_width="match_parent"
+        android:background="#fcfcff"
         android:layout_height="wrap_content"/>
 </LinearLayout>
