--- a/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
+++ b/app/src/main/res/layout/card_guidelines_recyclerlayout.xml
@@ -3,38 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#fcfcff"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_g"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp"
-        app:cardPreventCornerOverlap="true"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="5dp">
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginHorizontal="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/card_g_title"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Title"
-                android:textSize="25dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="10dp"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="@dimen/text_20sp"
                 android:paddingStart="10dp"/>
+            <ImageView
+                android:id="@+id/image_username_valid"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical|right"
+                app:srcCompat = "@drawable/svg_valid_icon"/>
 
+        </LinearLayout>
             <TextView
                 android:id="@+id/card_g_descr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description"
-                android:textSize="20dp"
-                android:paddingStart="10dp"/>
+                android:fontFamily="@font/lato_medium"
+                android:textSize="@dimen/text_18sp"
+                android:ellipsize="end"
+                android:maxLines="3"
+                android:paddingStart="10dp"
+                android:paddingBottom="10dp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
