--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,7 +44,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
 
     <dimen name="physical_exam_img_max_height">125dp</dimen>
-
+    <dimen name="text_16sp">16sp</dimen>
     <dimen name="text_18sp">18sp</dimen>
     <dimen name="text_20sp">20sp</dimen>
     <bool name="isTab">false</bool>
